Adding Github CI test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,17 +13,16 @@ jobs:
       - name: Ensure files are formatted with black
         run: |
           pip install --upgrade pip
-          pip install black==19.10b0
+          pip install black
           black --check tests.py
-          black --check train.py
 
-  # run-test:
-  #   needs: [black]
-  #   runs-on: ubuntu-latest
-  #   container: tensorflow/tensorflow
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: |
-  #         pip install --upgrade pip
-  #         pip install -r requirements.txt
-  #         sh scripts/test.sh
+  run-test:
+    needs: [black]
+    runs-on: ubuntu-latest
+    container: tensorflow/tensorflow
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          sh scripts/test.sh
