--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          apt install -y tar
-          libavcodec-dev libavformat-dev libswscale-dev
-          ibgstreamer-plugins-base1.0-dev libgstreamer1.0-dev
+          apt install -y tar libavcodec-dev libavformat-dev libswscale-dev libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev
           apt install -y libpng-dev libjpeg-dev libopenexr-dev libtiff-dev libwebp-dev`
           pip install --upgrade pip
           pip install -r requirements.txt
