--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          apt install -y tar libavcodec-dev libavformat-dev libswscale-dev libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev
+          apt-get update
+          apt install -y tar libavcodec-dev libavformat-dev libswscale-dev
+          apt-get update
+          apt install -y libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev
+          apt-get update
           apt install -y libpng-dev libjpeg-dev libopenexr-dev libtiff-dev libwebp-dev`
           pip install --upgrade pip
           pip install -r requirements.txt
