Fixing GitHub CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           apt-get update
           apt install -y libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev
           apt-get update
-          apt install -y libpng-dev libjpeg-dev libopenexr-dev libtiff-dev libwebp-dev`
+          apt install -y libpng-dev libjpeg-dev libopenexr-dev libtiff-dev libwebp-dev
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install gdown==4.3.1
