Fixing GitHub CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
           pip install -r requirements.txt
           pip install gdown==4.3.1
           gdown --id 1-5OxB8eQTkiE7HStTkk4sOsdixKKQxsq
-          tar -xvf "heart_test_data.tar" "heart_test_data"
+          tar -xvf "new_data.tar" "new_data"
           rm -rf heart_test_data.tar
           sh scripts/test.sh
